<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtViewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_cadastro_aluno"
            android:textColor="@color/purple_700"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNome"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_nome"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutIdade"
            android:layout_width="100dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_idade"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNota1"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNota1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_nota_primeiro_bimestre"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNota2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNota2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/label_nota_segundo_bimestre" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNota3"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNota3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_nota_terceiro_bimestre"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNota4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNota4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_nota_quarto_bimestre"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:onClick="click"
        android:text="@string/btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear3" />

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCadastrar">

        <Button
            android:id="@+id/btnAprovados"
            android:layout_width="113dp"
            android:layout_height="48dp"
            android:onClick="click"
            android:text="@string/btn_aprovados"
            android:textSize="11.2dp" />

        <Button
            android:id="@+id/btnReprovados"
            android:layout_width="113dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:onClick="click"
            android:text="@string/btn_reprovados"
            android:textSize="11.2dp" />

        <Button
            android:id="@+id/btnMediaIdade"
            android:layout_width="113dp"
            android:layout_height="48dp"
            android:onClick="click"
            android:text="@string/btn_media_idade"
            android:textSize="11.2dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>